# tap

./: .gitignore  CLAUDE.md  README.md  SECURITY.md  docker-compose.yml  index.html  package-lock.json  package.json  pnpm-lock.yaml  skills-lock.json  tsconfig.json  vite.config.ts
.github/: dependabot.yml
.github/workflows/: ci.yml  dependabot-auto-merge.yml  release.yml
.gsd/: QUEUE.md  ROADMAP.md  last-snapshot.md
.gsd/exec/: 067230c8-a620-4e6a-a7e7-7fbde744a375.meta.json  067230c8-a620-4e6a-a7e7-7fbde744a375.stdout  1674d6a3-3a91-40e6-8699-76d3e42cd6d2.meta.json  21c645ff-d468-4c1d-9632-667bdc7cadf8.meta.json  32612ccb-bea3-43c9-ab76-2ecca8cafe32.meta.json  32612ccb-bea3-43c9-ab76-2ecca8cafe32.stdout  3320eb19-4eda-4c13-b4a1-dacf48409086.meta.json  3320eb19-4eda-4c13-b4a1-dacf48409086.stdout  35a31f22-e3c6-4019-ba74-fd83c0aa7356.meta.json  36e21df4-856a-48e9-9840-6ab9ce0b37a4.meta.json  3ec2bd74-5a60-45b1-b47c-2da4d9c50e96.meta.json  3ec2bd74-5a60-45b1-b47c-2da4d9c50e96.stdout  441b156e-87d0-4f32-8f2d-a788bbdf3193.meta.json  441b156e-87d0-4f32-8f2d-a788bbdf3193.stdout  49e6f9e9-78da-4c39-abca-1a9e748ff193.meta.json  49e6f9e9-78da-4c39-abca-1a9e748ff193.stdout  4bc7c1fa-3fb1-495f-b83f-c267f501fa50.meta.json  4bc7c1fa-3fb1-495f-b83f-c267f501fa50.stdout  4d80fb6b-249c-478d-8afc-e3f3a81aaa05.meta.json  4ff8575d-c7af-4e38-9ad2-4f4eaed1f752.meta.json  4ff8575d-c7af-4e38-9ad2-4f4eaed1f752.stdout  5768da82-627b-4de3-b551-23a7a6cfeaca.meta.json  5768da82-627b-4de3-b551-23a7a6cfeaca.stdout  5f014411-6517-49a5-a666-ebf16e705fa7.meta.json  5f014411-6517-49a5-a666-ebf16e705fa7.stdout  6015ee2d-3acb-4cb2-a0e5-955cbc35361a.meta.json  6015ee2d-3acb-4cb2-a0e5-955cbc35361a.stdout  6727d700-0089-41f2-8558-d67afd4f09f7.meta.json  6727d700-0089-41f2-8558-d67afd4f09f7.stdout  6f501ddb-a350-49ce-8d8d-3fac4477db80.meta.json  6f501ddb-a350-49ce-8d8d-3fac4477db80.stderr  6f501ddb-a350-49ce-8d8d-3fac4477db80.stdout  858c9c7e-d443-40fc-8a5a-287e18487017.meta.json  8be15702-8e3d-4269-820b-a9f686681c53.meta.json  8be15702-8e3d-4269-820b-a9f686681c53.stdout  97f7d640-be4c-4290-9d55-a247255a4e4b.meta.json  97f7d640-be4c-4290-9d55-a247255a4e4b.stdout  9e84dbde-cd2b-4969-bb03-bf31d7783af3.meta.json  9e84dbde-cd2b-4969-bb03-bf31d7783af3.stdout  a774376d-c1d4-4979-8e9c-566b49a69dc7.meta.json  (+29 more)
.gsd/graphs/: graph.json
.planning/: MILESTONES.md  PROJECT.md  REQUIREMENTS.md  RETROSPECTIVE.md  ROADMAP.md  STATE.md  config.json  v1.2-MILESTONE-AUDIT.md  v1.7-MILESTONE-AUDIT.md
.planning/debug/: scroll-broken-after-failed-run.md
.planning/milestones/: v1.0-REQUIREMENTS.md  (+15 more)
docker/: definitions.json
docs/: linux-keychain.md  release-setup.md
examples/: README.md  empty.proto  event.proto  order.proto  sensor.proto  test-map-advanced.proto  testmap.proto  user.proto
examples/echo-service/: Cargo.toml  Dockerfile
examples/echo-service/src/: main.rs
src/: App.test.tsx  App.tsx  UpdateChecker.test.tsx  UpdateChecker.tsx  index.css
src-tauri/: Cargo.toml  Entitlements.plist  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: error.rs  lib.rs  test_support.rs
src-tauri/src/commands/: connection.rs  consume.rs  encode.rs  mod.rs  plan_runner.rs  proto.rs  publish.rs  subscribe.rs
src-tauri/src/profiles/: mod.rs
src-tauri/src/schema/: extractor.rs  mod.rs  types.rs
(+682 files in other folders)
