[package]
name = "tap"
version = "1.6.0"
description = "Tap — load .proto files and send protobuf messages to RabbitMQ"
authors = ["majesnix"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "tauri_app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
tauri-plugin-store = "2"
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
protox = "0.9"
prost-reflect = { version = "0.16", features = ["serde"] }
tokio = { version = "1", features = ["rt", "time", "sync"] }
tokio-util = { version = "0.7", features = ["rt"] }
futures-util = "0.3"
lapin = { version = "4", features = ["tokio"] }
uuid = { version = "1", features = ["v4"] }
percent-encoding = "2"
tracing = "0.1"
base64 = "0.22"
keyring-core = "1"
reqwest = { version = "0.13", features = ["json", "rustls"] }

[target.'cfg(target_os = "linux")'.dependencies]
dbus-secret-service-keyring-store = { version = "1", features = ["crypto-rust"] }

[target.'cfg(target_os = "macos")'.dependencies]
apple-native-keyring-store = { version = "1", features = ["keychain"] }

[target.'cfg(target_os = "windows")'.dependencies]
windows-native-keyring-store = "1"

[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin-updater = "2"
tauri-plugin-process = "2"

